# vcard-qr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs  vcard.rs
